fixed firefox cutoff problem

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -65,7 +65,8 @@ header {
 }
 
 .logo {
-  height: 100%;
+  height: 10vh;
+  width: 10vh;
   box-shadow: none;
   border: none;
   flex: 0.25;
